# Swarm-yuan

./: .gitignore  CLAUDE.md  README.md  USAGE.md  plan.md
.github/workflows/: ci.yml
.swarm-yuan/: cost-report.md  trace.jsonl
Swarm-studio/: .swarm-yuan-version  SKILL.md
Swarm-studio/assets/: branch-setup.sh  data-sample-template.md  env-setup.sh  plan-template.md  spec-template.md  state-machine.sh
Swarm-studio/commands/: explore.md  precheck.md  spec.md
Swarm-studio/hooks/: hooks.json
Swarm-studio/references/: claude-code-capabilities.md  code-graph-tools.md  codebase.md  cognitive-bias.md  dev-guide.md  domain-knowledge.md  gsd-patterns.md  memory-persistence.md  reference-manual.md  release.md  review-methodology.md  security-spec.md  subagent-orchestration.md  workflow.md
Swarm-studio/scripts/: mcp-tools.md  precheck.conf  precheck.sh  self-check.sh  snippets.md  state-machine.sh
docs/: 2026-07-17-framework-rules-engine-design.md  2026-07-20-audit-optimization-decisions.md  2026-07-20-upstream-vendor-decision.md  PROMO.md  USAGE.md  design-philosophy-consistency.md  paradigm-decisions.md  paradigm-positioning.md  upstream-baseline.md
swarm-yuan/: .gitignore  README.md  SKILL.md  install.bat  install.sh
swarm-yuan/tests/fixtures/cargo/compliant/: Cargo.toml  deny.toml  precheck.conf
swarm-yuan/tests/fixtures/cargo/compliant/src/: main.rs
swarm-yuan/tests/fixtures/cargo/violating/: Cargo.toml  expected-fail-ids  precheck.conf
swarm-yuan/tests/fixtures/cargo/violating/src/: main.rs
verifier/: README.md  capture-baseline.sh
(+1365 files in other folders)
